# celeri

./: README.md  docker-compose.yml
api/: Dockerfile  app.py  pyproject.toml
worker/: Dockerfile  app.py  pyproject.toml
